[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dfir-unfurl"
authors = [{name = "Ryan Benson", email = "ryan@dfir.blog"}]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3"
]
dynamic = ["dependencies", "optional-dependencies", "version"]
description = "Unfurl takes a URL and expands (\"unfurls\") it into a directed graph"
keywords=["unfurl", "forensics", "dfir", "reverse-engineering", "security", "osint", "digital forensics"]

[tool.setuptools_scm]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
version = { attr = "unfurl.__version__" }
optional-dependencies.ui = { file = ["requirements-ui.in"] }
optional-dependencies.lookups = { file = ["requirements-lookups.in"] }
optional-dependencies.all = { file = ["requirements-all.in"] }

[project.urls]
Home = "https://github.com/obsidianforensics/unfurl"
