[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dfir-unfurl"
authors = [{name = "Ryan Benson", email = "ryan@dfir.blog"}]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3"
]
dynamic = ["dependencies", "optional-dependencies", "version"]
description = "Unfurl takes a URL and expands (\"unfurls\") it into a directed graph"
keywords=["unfurl", "forensics", "dfir", "reverse-engineering", "security", "osint", "digital forensics"]

[tool.setuptools_scm]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "unfurl.__version__" }
optional-dependencies.ui = { file = ["requirements-ui.txt"] }
optional-dependencies.lookups = { file = ["requirements-lookups.txt"] }
optional-dependencies.all = { file = ["requirements-all.txt"] }

[project.scripts]
unfurl = "unfurl.cli:command_line_interface"
unfurl_app = "unfurl.app:web_app"

[project.urls]
Home = "https://github.com/obsidianforensics/unfurl"
